--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: >
 email: mizumechat@gmail.com
 author: tanaka504
 avatar: "//www.gravatar.com/avatar/your_email_md5?d=mm&s=135"
-profile: One sentence introducing yourself.
+profile: ''
 #twitter_username: twitter_username
 #github_username:  github_username
 profile_links:
