--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ email: mizumechat@gmail.com
 author: tanaka504
 avatar: "//www.gravatar.com/avatar/your_email_md5?d=mm&s=135"
 profile: ''
-#twitter_username: twitter_username
-#github_username:  github_username
+twitter_username: KiSaSaGe_OU
+github_username:  tanaka504
 profile_links:
   Email: "mizumechat@gmail.com"
   GitHub: "https://github.com/tanaka504"
