--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ avatar: "//www.gravatar.com/avatar/your_email_md5?d=mm&s=135"
 profile: ''
 twitter_username: KiSaSaGe_OU
 github_username:  tanaka504
+email_address: "mizumechat@gmail.com"
 profile_links:
   Email: "mizumechat@gmail.com"
   GitHub: "https://github.com/tanaka504"
